# CMakeCatchMPI-CW2

./: CMakeLists.txt  CTestConfig.cmake  README.md  rename.sh
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  ccmpiIncludeMPI.cmake  ccmpiIncludeOpenMP.cmake  ccmpiSetupMSVCRuntime.cmake  ccmpiSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  ccmpiHelloWorld.cpp
Code/Lib/: CMakeLists.txt  ccmpiException.cpp  ccmpiException.h  ccmpiExceptionMacro.h  ccmpiMyFunctions.cpp  ccmpiMyFunctions.h  ccmpiWin32ExportHeader.h
Testing/: CMakeLists.txt  ccmpiCatchMain.cpp  ccmpiCatchMain.h  ccmpiCommandLineArgsTest.cpp  ccmpiMyFunctionsTest.cpp  ccmpiPiSeriesMPITest.cpp  ccmpiPiSeriesOMPTest.cpp  ccmpiTriangleNumberSeriesMPITest.cpp
